[package]
name = "pumpkin_redpiler_plugin"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]

[dependencies]

# This is the base crate with most high-level type definitions
pumpkin = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin" } 
# Other utilities used by Pumpkin (e.g. TextComponent, Vectors...)
pumpkin-util = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-util" }

pumpkin-data = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-data" }

pumpkin-world =  { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-world" }


# Macros for easier plugin development
pumpkin-api-macros = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-api-macros" }

# A utility allowing plugins to work asynchronously
async-trait = "0.1"
# A rust asynchronous runtime
tokio = "1.42"
# Logging
log = "0.4"


mchprs_redpiler = { path = "../MCHPRS/crates/redpiler"}
mchprs_redstone = {path = "../MCHPRS/crates/redstone"}
mchprs_world = {path = "../MCHPRS/crates/world"}
mchprs_blocks = {path = "../MCHPRS/crates/blocks"}